--- a/Capstone Objective.ipynb
+++ b/Capstone Objective.ipynb
@@ -2,9 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Capstone Project - Food Wars\n",
+    "### This is my Applied Data Science Capstone project by IBM/Coursera"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This is the description of what my capstone project will be based on."
+    "## Table of Contents\n",
+    "* [Introduction - Business Problem](#introduction)\n",
+    "* [Data](#data)\n",
+    "* [Methodology](#methodology)\n",
+    "* [Analysis](#analysis)\n",
+    "* [Results & Discussion](#results)\n",
+    "* [Conclusion](#conclusion)"
    ]
   },
   {
@@ -13,7 +29,7 @@
     "tags": []
    },
    "source": [
-    "#### Introduction/Business Problem"
+    "### Introduction: Business Problem <a name=\"introduction\"></a>"
    ]
   },
   {
@@ -27,16 +43,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A corporation is looking to expand its consumer market but hasn't decided where to open?\n",
-    "The company wants to look towards moving into other countries; Where would be a better market for consumers of vegan food be located?\n",
-    "The options are Paris, New York and Stockholm."
+    "Vegan Co. is looking to expand its consumer market but hasn't made a decision on where to open another location. The board has narrowed our options down to Paris, New York and Stockholm. Of the three options, where would be a better market for consumers of vegan food be located? What are some factors that would we would need to keep in mind, in order to come to a conclusive decision? How many competitors would we have in the area? What are the city's consensus/policies on food health? i.e are the locals food concious.   \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Data/Problem Solving"
+    "What are some factors that would we would need to keep in mind, in order to come to a conclusive decision? There can only be one other vegan restuarant within the (given radius). We want to be as close to the city center as possible, thus exposing the brand to the highest volume of patrons possible.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data/Problem Solving <a name=\"data\"></a>"
    ]
   },
   {
@@ -53,6 +74,70 @@
     "We will locate the Foursquare data for these cities, find out which has a more accepting market for the company's vegan products, and scope for competitors.\n",
     "It may come in handy to get an estimate of how many vegans are in these cities, which could be done by social media user data."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Methodology <a name='methodology'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to accomplish this project we need to choose which city contains the more signifcant market for vegan products. Taking into consideration the distance people would need to travel, we determined an 11 mile radius is what the majority popluas considers convenient.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis <a name='analysis'></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Results & Discussion <a name='results'></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion <a name='conclusion'></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
